--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,12 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <repositories>
-        <repository> <!-- Configure repository to access Javalin Test deprecated version -->
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.javalin/javalin -->
         <dependency>
             <groupId>io.javalin</groupId>
-            <artifactId>javalin</artifactId>
-            <version>4.6.7</version>
+            <artifactId>javalin-bundle</artifactId>
+            <version>5.2.0</version>
         </dependency>
 
 
@@ -64,16 +57,16 @@
         </dependency>
 
         <!-- Integration testing -->
-        <dependency>
-            <groupId>com.github.javalin</groupId>
-            <artifactId>javalin-test</artifactId>
-            <version>0.5.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.javalin</groupId>-->
+<!--            <artifactId>javalin-test</artifactId>-->
+<!--            <version>0.5.1</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>2.1.214</version>
-            <scope>test</scope>
+<!--            <scope>test</scope>-->
         </dependency>
 
     </dependencies>
